--- a/refs.bib
+++ b/refs.bib
@@ -4046,5 +4046,11 @@ of Sparse Networks},
 	publisher={JSTOR}
 }
 
+@article{linderman2017,
+	title={Reparameterizing the Birkhoff polytope for variational permutation inference},
+	author={Linderman, Scott W and Mena, Gonzalo E and Cooper, Hal and Paninski, Liam and Cunningham, John P},
+	journal={arXiv preprint arXiv:1710.09508},
+	year={2017}
+}
 
 
