--- a/main.tex
+++ b/main.tex
@@ -760,6 +760,31 @@ where $\mathbf{S} := \frac{1}{K_n - 1} \sum_{j>1} (\bar{d}_{j-1} - T_j)$
 	
 \end{frame}
 
+\begin{frame}
+	\frametitle{MLEs for SNAP datasets}
+	Fitted point estimates
+	\begin{table}[!ht]
+		\begin{center}
+			\color{lightgray}{
+				\resizebox{1.05\textwidth}{!}{
+					\begin{tabular}{llll | lllllll}
+						\multirow{2}{*}{Dataset} & \multicolumn{3}{c}{\color{black}{Coupled $\PYP(\theta,\alpha)$}}  & &  \multicolumn{2}{c}{\color{black}{Uncoupled $\PYP(\theta,\tau)$}} &  & \multicolumn{3}{c}{\color{black}{$\Geom(\geom)$}}                             \\
+						\cline{2-4} \cline{6-7} \cline{9-11}
+						& \color{black}{$(\hat{\theta},\hat{\alpha})$} & $\hat{\eta}$           & \color{black}{Pred. l-l.}            & \color{black}{$\hat{\alpha}$}    & \color{black}{$(\hat{\theta},\hat{\tau})$} & \color{black}{Pred. l-l.}     &     & \color{black}{$\hat{\beta}$}  & $\hat{\eta}$   & \color{black}{Pred. l-l.}                             \\
+						\hline
+						\color{black}{Ask Ubuntu}  & (18080, 0.25) & 1.25   & -3.707e6              & -2.54            & (-0.99, 0.99)    & -3.678e6  &   &  0.083 & 2.32    & \textbf{-3.678e6}                         \\
+						\color{black}{UCI social network} & (320.4, 4.4e-11) & --   & -1.600e5            & -4.98             & (5.50, 0.52)     & \textbf{-1.595e6}   &  & 0.016  & 2.10  & -1.596e5                    \\
+						\color{black}{EU email}   & (113.6, 2.5e-14)  & --    & \textbf{-8.06e5}              & -1.86              & (113.6, 9.2e-10)      & \textbf{-8.06e5}  &   & 0.001  & 2.00   & -8.07e5                     \\
+						\color{black}{Math Overflow} & (2575, 0.15) & 1.15  & -1.685e6              & -6.62           & (-0.97, 0.997)    & -1.670e6 &    & 0.025  & 2.19   & \textbf{-1.670e6}                \\
+						\color{black}{Stack Overflow} & (297600, 0.11) & 1.11 & -3.358e8             & -8.94            & (-1.0, 1.0)      &  -3.333e8  &    &  0.020  & 2.21   & \textbf{-3.333e8}                 \\
+						\color{black}{Super User}  & (20640, 0.24) & 1.24  & -5.855e6            & -4.19          & (-0.996, 1.0)      &  \textbf{-5.775e6}   &  & 0.067 & 2.37    & -5.775e6              \\
+						\color{black}{Wikipedia talk pages}  & (14870, 0.54) & 1.54  & -3.074e7          & -0.25            & (-1.0, 1.0)   & \textbf{-3.066e7}  &   & 0.073  & 2.10   & -3.066e7                   
+					\end{tabular}
+				}}
+			\end{center}
+			\vspace*{-\baselineskip}
+		\end{table}
+	\end{frame}
 
 \begin{frame}
 	\frametitle{MLEs for SNAP datasets}
