--- a/main.tex
+++ b/main.tex
@@ -446,9 +446,12 @@
 	
 	\vspace{20pt}
 	
-	$\eta \in (1,2)$
-	
-	$\exists$ a class of models that includes (some) edge exchangeable models, but also YS and admits all the $\eta$s
+	\textbf{For edge exchangeable models, $\eta \in (1, 2)$} \\
+	We will show $K_n = o(n)$. 
+	\begin{align*}
+		\prob (K_n / n \to 0) &= \bbE[\prob(K_n/n \to 0 \mid \text{paintbox})] \\
+		&= 1
+	\end{align*}
 	
 \end{frame}
 
